# AIPS

./: .gitignore  CMakeLists.txt  Findx264.cmake  README.md
camera/: CMakeLists.txt  camera.cpp  camera.hpp  camera_connector.cpp  camera_connector.hpp  main.cpp
common/: CMakeLists.txt  common.cpp  common.hpp  packedmessage.h  packets.cpp  packets.h  packets.hpp  packets.proto  settings.cpp
gui/: CMakeLists.txt  gui.cpp  gui.h  gui_connector.cpp  gui_connector.h  gui_connector.hpp  main.cpp
hub/: CMakeLists.txt  client_handler.cpp  client_handler.hpp  main.cpp  position_system.cpp  position_system.hpp  server.cpp  server.hpp
rc/: CMakeLists.txt
